# sidedocknest

./: ARCHITECTURE.md  PROJECT_PLAN.md  README.md  correcoes.md  index.html  package-lock.json  package.json  vite.config.ts  workflow.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  tray.rs
src/bridge/: commands.ts  system.ts
src/components/common/: ContextMenu.tsx  Modal.tsx  Toast.tsx
src/components/dock/: DockItem.tsx  Sidebar.tsx  Stack.tsx
src/hooks/: useDragDrop.ts  useGlobalHotkeys.ts  useTraySync.ts  useWindowPosition.ts
src/stores/: configStore.ts  dockStore.ts  toastStore.ts
src/styles/: globals.css
src/types/: dock.ts
src/utils/: shortcutUtils.ts
