[package]
name = "sidedocknest"
version = "0.1.0"
description = "Launcher lateral minimalista para Windows"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
open = "5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-icons = "0.3"
image = "0.25"
base64 = "0.22"
lnk = "0.5"
